--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gltf-transform/core": "^2.5.1",
+    "@gltf-transform/extensions": "^2.5.1",
+    "@gltf-transform/functions": "^2.5.1",
     "@react-three/drei": "^9.51.24",
     "@react-three/fiber": "^8.10.0",
     "@react-three/postprocessing": "^2.7.0",
@@ -19,8 +22,8 @@
     "postprocessing": "^6.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.148.0",
-    "react-router-dom": "^6.7.0"
+    "react-router-dom": "^6.7.0",
+    "three": "^0.148.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
